fix body overflow

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -5,8 +5,6 @@
 
 
 body {
-  overflow-y: scroll;
-
   &::-webkit-scrollbar {
     width: 12px;
   }
